--- a/style.css
+++ b/style.css
@@ -126,3 +126,33 @@ body {
   background-color: #ffffcc;
   border-left: 6px solid #ffeb3b;
 }
+
+/*skill*/
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  background-color: #ddd;
+}
+
+.skills {
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+}
+
+.html {
+  width: 60%;
+  background-color: #04aa6d;
+}
+.css {
+  width: 60%;
+  background-color: #2196f3;
+}
+.js {
+  width: 65%;
+  background-color: #f44336;
+}
