--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .BG {
   background-image: url("https://gifdb.com/images/high/anime-moon-reflection-background-4rnog8oavaqmz7ts.webp");
   /* Full height */
-  height: 100%;
+  height: 100vh;
   /* Center and scale the image nicely */
-  background-position: auto;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: 150%;
+  background-size: cover;
 }
 .styleText {
   text-align: center;
@@ -95,6 +95,27 @@ body {
   animation: glow 1s ease-in-out infinite alternate;
 }
 
+.glow3 {
+  font-size: 30px;
+  color: #ffffff;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+.body {
+  background: linear-gradient(to right, hwb(180, 53%, 4%), hwb(240, 53%, 4%));
+  background-size: 200% 100%;
+  animation: gradient-animation 5s linear infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
+
 @-webkit-keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #008ae6,
@@ -125,34 +146,4 @@ body {
 .warning {
   background-color: #ffffcc;
   border-left: 6px solid #ffeb3b;
-}
-
-/*skill*/
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  width: 100%;
-  background-color: #ddd;
-}
-
-.skills {
-  text-align: right;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  color: white;
-}
-
-.html {
-  width: 60%;
-  background-color: #04aa6d;
-}
-.cjava {
-  width: 60%;
-  background-color: #2196f3;
-}
-.js {
-  width: 65%;
-  background-color: #f44336;
 }
